--- a/android/app/src/main/res/drawable/background_splash.xml
+++ b/android/app/src/main/res/drawable/background_splash.xml
@@ -1,4 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:drawable="@color/splash_bg"/>
+    <item
+        android:width="200dp"
+        android:height="113dp"
+        android:drawable="@mipmap/icon"
+        android:gravity="center" />
 </layer-list>
