--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -2,5 +2,5 @@
 <resources>
     <color name="splash_bg">#ffffff</color>
     <color name="primary_dark">#ffffff</color>
-    <color name="ic_launcher_background">#ffffff</color>
+    <color name="ic_launcher_background">#2d2f7f</color>
 </resources>
