Rename iOS assets, move by a pixel

--- a/ios/PrideLondonApp/Base.lproj/LaunchScreen.xib
+++ b/ios/PrideLondonApp/Base.lproj/LaunchScreen.xib
@@ -11,21 +11,21 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB">
+        <view userInteractionEnabled="NO" contentMode="scaleToFill" id="iN0-l3-epB">
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView autoresizesSubviews="NO" userInteractionEnabled="NO" contentMode="TopLeft" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="SplashLogo" translatesAutoresizingMaskIntoConstraints="NO" id="31z-2K-IUR">
+                <imageView autoresizesSubviews="NO" userInteractionEnabled="NO" contentMode="TopLeft" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="WelcomeLogo" translatesAutoresizingMaskIntoConstraints="NO" id="31z-2K-IUR">
                     <rect key="frame" x="102" y="530" width="173" height="64"/>
                     <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES"/>
                 </imageView>
-                <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="R0b-zp-4ZX">
-                    <rect key="frame" x="102" y="125" width="172" height="436"/>
+                <view userInteractionEnabled="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="R0b-zp-4ZX">
+                    <rect key="frame" x="102" y="124" width="172" height="436"/>
                     <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                     <subviews>
-                        <imageView userInteractionEnabled="NO" contentMode="TopLeft" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="SplashText" translatesAutoresizingMaskIntoConstraints="NO" id="c1h-C8-yFg">
+                        <imageView userInteractionEnabled="NO" contentMode="TopLeft" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="WelcomeText" translatesAutoresizingMaskIntoConstraints="NO" id="c1h-C8-yFg">
                             <rect key="frame" x="0.0" y="0.0" width="172" height="236"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         </imageView>
                     </subviews>
                 </view>
@@ -37,7 +37,7 @@
         </view>
     </objects>
     <resources>
-        <image name="SplashLogo" width="172" height="67"/>
-        <image name="SplashText" width="171" height="238"/>
+        <image name="WelcomeLogo" width="172" height="67"/>
+        <image name="WelcomeText" width="171" height="238"/>
     </resources>
 </document>
